
2009-03-18  9:30 Ali aliov@xfce.org 
	 * : Check carefully if a new added device is a new battery device(hald always duplicated udi for devices)

2009-03-18  8:47 Ali aliov@xfce.org 
	 * : Added Inhibit interface+monitor ScreenSaver Inhibit messages to catch inhibition and inhibit xfpm

2009-03-17 19:54 Ali aliov@xfce.org 
	 * : Some optimization in the battery code+added GetOnBattery and on LowBattery DBus methods

2009-03-17 19:15 Ali aliov@xfce.org 
	 * : Added experimentale code to monitor hal proxy+some typos

2009-03-17 13:10 Ali aliov@xfce.org 
	 * : Fix a bug in idle timeout that was breaking gdk events

2009-03-16 23:48 Ali aliov@xfce.org 
	 * : Run as daemon by default unless no-daemon is specified

2009-03-16 23:27 Ali aliov@xfce.org 
	 * : Added freedesktop.PowerManagement power interfaces and methods

2009-03-16 19:06 Ali aliov@xfce.org 
	 * : Add a weak reference on the adapter object+remove unused signals

2009-03-16 17:36 Ali aliov@xfce.org 
	 * : Fix wrong alarm settings

2009-03-16 15:39 Ali aliov@xfce.org 
	 * : Set brightness idle level to the last user selected level+Fix a bug in SetCpuFreqGovernor that was causing a proxy disconnection

2009-03-15 13:57 Ali aliov@xfce.org 
	 * : Added some icons from gpm+Catch brightness key to avoid display flickering

2009-03-15 11:34 Ali aliov@xfce.org 
	 * : Removed no longer available .la file from libxfpm

2009-03-15 11:12 Ali aliov@xfce.org 
	 * : Patched to fix makefile typo and correct the POTFILES.in (Yves Alexis)+Use a weak reference for the common objects

2009-03-14 19:26 Ali aliov@xfce.org 
	 * : Added the missing desktop file, Thanks to Mike for pointing out

2009-03-14 17:23 Ali aliov@xfce.org 
	 * : Added desktop file to be installed in xdt/autostart

2009-03-14 16:40 Ali aliov@xfce.org 
	 * : Idle function to reduce screen luminosity after a certain time+fix a bug in the adapter code

2009-03-13 16:31 Ali aliov@xfce.org 