@@ -1,4 +1,7 @@
 
+2009-03-18 10:04 Ali aliov@xfce.org 
+	 * : Calculate battery percentage if this key is not present in HAL
+
 2009-03-18  9:30 Ali aliov@xfce.org 
 	 * : Check carefully if a new added device is a new battery device(hald always duplicated udi for devices)
 
